# goBrain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
compose/postgres/: .env.example  docker-compose.yml  init.sql
docs/: architecture.md  model-routing.md  pluto-integration.md  remote-mcp.md  roadmap.md  runbook.md
ingester/: .env.example  pyproject.toml
ingester/src/brain_ingester/: __init__.py  chunker.py  config.py  dashboard.html  db.py  main.py  models.py  ollama_client.py  pluto_rollup.py  summarizer.py  writers.py
ingester/src/brain_ingester/parsers/: __init__.py  claude_ai.py  grok.py
ingester/src/brain_ingester/watchers/: __init__.py  claude_code.py  inbox.py
mac-mini/: setup-ingester.sh  setup-llamacpp.sh  setup-mcp-remote.sh  setup-ollama.sh  setup-pluto-rollup.sh
mac-mini/launchd/: com.gobag.ingester.plist  com.gobag.llamacpp.plist  com.gobag.mcp-remote.plist  com.gobag.ollama.plist  com.gobag.pluto-rollup.plist
mcp-server/: .env.example  pyproject.toml
mcp-server/src/brain_mcp/: __init__.py  config.py  http_server.py  retrieval.py  server.py
scripts/: register-mcp.sh
windows/: README.md  install-shipper.ps1  ship-claude-code.ps1  ship-hidden.vbs
