[project]
name = "brain-ingester"
version = "0.1.0"
description = "Ingestion service for the goBrain: watches sources, summarizes, embeds, and writes vault + pgvector."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "watchfiles>=0.24",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "tiktoken>=0.8",
    "orjson>=3.10",
    "structlog>=24.4",
]

[project.scripts]
brain-ingester = "brain_ingester.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_ingester"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
