[project]
name = "brain-mcp"
version = "0.1.0"
description = "MCP server exposing goBrain search/retrieval to Claude Code, Claude Desktop, and remote clients."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
brain-mcp = "brain_mcp.server:run"
brain-mcp-http = "brain_mcp.http_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.8",
]
